--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,39 +5,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon">
     <title>Stempel Uhr</title>
-    <script>
-        async function fetchData() {
-            try {
-                const response = await fetch('http://127.0.0.1:5000/api/data');
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-                const data = await response.json();
-                document.getElementById('result').innerText = JSON.stringify(data);
-            } catch (error) {
-                console.error('There was a problem with the fetch operation:', error);
-            }
-        }
-        async function fetchUsers() {
-            try {
-                const response = await fetch('http://127.0.0.1:5000/users');
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-                const data = await response.json();
-                document.getElementById('result1').innerText = JSON.stringify(data);
-            } catch (error) {
-                console.error('There was a problem with the fetch operation:', error);
-            }
-        }
+    <script src="../static/app.js">
+
+        
     </script>
 </head>
 <body>
     <h1>Stempel Uhr</h1>
-    <button onclick="fetchData()">Fetch Data</button>
-    <pre id="result"></pre>
+    <h2>Testing Requests</h2>
+    <br>
+    <!-- Example Request -->
+    <div>
+        <h3>example Request1</h3>
+        <button onclick="fetchData()">Fetch Data</button>
+        <pre id="result"></pre>
+    </div>
+    <!-- Requesting Users -->
+    <div>
+        <br>
+        <h3>Requesting Users</h3>
+        <h4>Fetch all users</h4>
+        <button onclick="fetchUsers()">Fetch Users</button>
+        <pre id="result1"></pre>
 
-    <button onclick="fetchUsers()">Fetch Users</button>
-    <pre id="result1"></pre>
+        <h4>Fetch user by id</h4>
+        <button onclick="fetchUser_byid()">Fetch Users</button>
+        <input type="number" id="user_id">
+        <pre id="result2"></pre>
+
+        <h4>Fetch user by name</h4>
+        <button onclick="fetchUser_byname()">Fetch Users</button>
+        <input type="text" id="user_name">
+        <pre id="result3"></pre>
+
+        <h4>Create new User</h4>
+        <button onclick="createUser()">Create New User</button>
+        <br>
+        <label for="user_firstName">firstname</label>
+        <input type="text" id="user_firstName">
+        <br>
+        <label for="user_lastName">lastname:</label>
+        <input type="text" id="user_lastName">
+        <br>
+        <label for="user_tagNum">tagNum:</label>
+        <input type="number" id="user_tagNum">
+        <br>
+        <label for="user_email">Email:</label>
+        <input type="email" id="user_email">
+        <br>
+        <label for="user_password">Password:</label>
+        <input type="password" id="user_password">
+        <pre id="result4"></pre>
+    </div>
+    <!-- Requesting permissions -->
+    <div>
+        <br>
+        <h3>Requesting permissions</h3>
+    </div>
+
+    <!-- Requesting onlinetime -->
+    <div>
+        <br>
+        <h3>Requesting onlinetime</h3>
+    </div>
+
+    <!-- Requesting totaltime -->
+    <div>
+        <br>
+        <h3>Requesting totaltime</h3>
+    </div>
 </body>
 </html>
