Restructured, optimized & documented
Separated the mysqlconnector.py into multiple separate files & continued routing / documenting,
added requirements.txt

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -56,6 +56,11 @@
         <label for="user_password">Password:</label>
         <input type="password" id="user_password">
         <pre id="result4"></pre>
+
+        <h4>Edit User</h4>
+        <button onclick="editUser_byid()">Edit Users</button>
+        <input type="text" id="user_name">
+        <pre id="result5"></pre>
     </div>
     <!-- Requesting permissions -->
     <div>
