Fixes and additions
Fixed:
- Roles
- renamed routes & bind to session id
- added home button on Login / Register page

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Dashboard</title>
+    <title>TimeClock Dashboard</title>
     <script src="../static/app.js"></script>
 </head>
 <body>
