--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home</title>
+    <title>TimeClock</title>
 </head>
 <body>
-    <h1>Welcome to the Flask App</h1>
+    <h1>Welcome to the TimeClock</h1>
     <nav>
         {% if current_user.is_authenticated %}
             <p>Hello, {{ current_user.username }} (Role: {{ current_user.role }})</p>
