added test function
Get all Users

--- a/app/templates/adminDashboard.html
+++ b/app/templates/adminDashboard.html
@@ -77,6 +77,16 @@
                 <pre id="result4">test</pre>
             </div>
 
+            <div>
+                <div>
+                    <Label>Get all Users</Label>
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+                    <button type="submit" onclick="fetchAllUsers()">Users</button>
+                    <pre id="result1">test</pre>
+                </div>
+
+            </div>
+
         </div>
 
     </div>
